pom.xml atualizada com a dependencia de reprodutor de som